tests/baselines/reference/unusedMultipleParameter2InContructor.errors.txt
tests/cases/compiler/unusedMultipleParameter2InContructor.ts(3,17): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameter2InContructor.ts(3,50): error TS6133: Parameter 'person3' has never been used.
tests/cases/compiler/unusedMultipleParameter2InContructor.ts(4,13): error TS6132: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameter2InContructor.ts (3 errors) ====
    
    class Dummy {
        constructor(person: string, person2: string, person3: string) {
                    ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
                                                     ~~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person3' has never been used.
            var unused = 20;
                ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
            person2 = "Dummy value";
        }
    }